<resources>
    <string name="app_name">Moviesy</string>
    <string name="short_text">Through a series of flashbacks, four young chinese women born in America and their respective mothers born in feudal China, explore their past. This search will help them understand their difficult mother/daughter relationship.</string>
    <string name="af_title">The Joy Luck Club</string>
    <string name="ad_year">English • 1993</string>
    <string name="item_genre_title">Sci-Fi</string>
    <string name="af_more">More</string>
    <string name="af_imdb_text">imdb 7.7</string>
    <string name="af_pg_text">R</string>
    <string name="suggest">Suggested</string>
    <string name="similar">Similar to</string>
    <string name="watch">Watch Now</string>
    <string name="quality">720p</string>
    <string name="seeds">32 seeds</string>
    <string name="peers">19 peers</string>
    <string name="size">1.2 GB</string>
    <string name="select_type">Select Type:</string>
    <string name="bluray">BluRay</string>
    <string name="webrip">WebRip</string>
    <string name="CHANNEL_ID_1">yts_01</string>
    <string name="CHANNEL_ID_2">yts_02</string>
    <string name="CHANNEL_ID_3">yts_03</string>
    <string name="CHANNEL_ID_4">yts_04</string>
    <string name="current">Current</string>
    <string name="pending">Pending Jobs</string>
    <string name="ask_delete">Delete files in storage?</string>
    <string name="yes">Do It</string>
    <string name="no">Nope</string>
    <string name="ask_title">Ask</string>
    <string name="download_queue">Download queue is empty :(</string>
    <string name="title">Title</string>
    <string name="positive">Positive</string>
    <string name="cancel">CANCEL</string>
    <string name="local_storage">Click to download the subtitle into your local device storage.</string>
    <string name="alright">Alright</string>
    <string name="learn">Learn More</string>
    <string name="filter">Filter:</string>
    <string name="timeout_error_text">It seems that your device does not support torrent downloading. It would be better to use an external torrent client eg: Bit-Torrent.</string>
    <string name="timeout_error_title">Timeout Error</string>
    <string name="item_tip_text">Click to immediately start download in app or press and hold to see other download options.</string>
    <string name="previous_text">Previous torrent download files are detected, do you want to delete it? Deleting it will cause re-downloading of whole stream. Could be useful when switching from quality 720p to 1080p.</string>
    <string name="previous_title">Delete Download?</string>
    <string name="delete">Delete</string>
    <string name="noSubs">No subtitle found</string>
    <string name="select_sub">Select Subtitle:</string>
    <string name="sort_by">Sort by</string>
    <string name="date">Date</string>
    <string name="download">Download</string>
    <string name="popular">Popular</string>
    <string name="rating">Rating</string>
    <string name="year">Year</string>
    <string name="seeders">Seeders</string>
    <string name="order_by">Order</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="searchmovies">Search for movies</string>
    <string name="err_movie_not_found_text">Hint: Try searching by title, actor/director name, imdb code containing it.</string>
    <string name="err_movie_not_found_title">Error: Movie not found</string>
    <string name="crime">Crime</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="watchlist">Watchlist</string>
    <string name="library">Library</string>
    <string name="charts">Charts</string>
    <string name="upcoming">Upcoming</string>
    <string name="categories">Categories</string>
    <string name="remove_watchlist">Removed from your watchlist</string>
    <string name="undo">Undo</string>
    <string name="fragment_watchlist_track">To keep track of the things you want to watch, just add to it the favourites.</string>
    <string name="pause">Pause</string>
    <string name="copy_magnet">Copy Magnet Url</string>
    <string name="unpause">Unpause</string>
    <string name="unpause_top"><![CDATA[Unpause & add to top queue]]></string>
    <string name="nav_download">Download Queue</string>
    <string name="add_watchlist">Added to watchlist</string>
    <string name="yts_base_title">YTS Proxy</string>
    <string name="yts_base_subtitle">Set the default YTS website url.</string>
    <string name="yify_title">YIFY Proxy</string>
    <string name="yify_subtitle">Set default YIFY website url.</string>
    <string name="theme_subtitle">Sometimes you might\'ve to restart the app for theme to get applied properly.</string>
    <string name="downloads">Downloads</string>
    <string name="show_location">Show location</string>
    <string name="delete_storage">Remove from storage</string>
    <string name="play">Play</string>
    <string name="invalid_movieId">Invalid movieId parameter</string>
    <string name="movie_not_loaded">Movie not loaded yet!</string>
    <string name="anonymous_title">Anonymous Download</string>
    <string name="anonymous_summary">Enable spoofing of IP location while downloading torrent movies.</string>
    <string name="error_directory">Current directory structure is not supported</string>
    <string name="report_issue_summary">Create a github issue in the official repository</string>
    <string name="report_issue_title">Report a bug</string>
    <string name="feedback_summary">Want a give a feedback just hit me up</string>
    <string name="feedback_title">Send me an email</string>
    <string name="start_from">Play from</string>
    <string name="media_route_menu_title">Play On</string>
    <string name="error_cast_wifi">Connect to wifi device or hotspot</string>
    <string name="cast_media_to_device">Cast media to device</string>
    <string name="cast_to_device">Cast to device</string>
    <string name="stop_cast">Stop casting from the menu to show normal play button.</string>
    <string name="error_video_path">Not a valid video path</string>
    <string name="error_unknown">Failed due to unknown error</string>
    <string name="location">Location</string>
    <string name="delete_undone">This can\'t be undone?</string>
    <string name="error_path_exist">Path does not exist</string>
    <string name="error">Error</string>
    <string name="dismiss">Dismiss</string>
    <string name="featured">Featured</string>
    <string name="top_rated">Top Rated</string>
    <string name="top_today">Top Today</string>
    <string name="most_liked">Most liked</string>
    <string name="latest">Latest</string>
    <string name="premium_download_limit">No download limit queues</string>
    <string name="premium_subtitle_limit">Subtitles while casting</string>
    <string name="premium_ads">No irritating pop-up ads</string>
    <string name="purchase">Purchase</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="premium_unlocked">Premium is unlocked</string>
    <string name="download_started">Download started, check notification</string>
    <string name="featured_movies">Couldn\'t fetch featured movies</string>
    <string name="unlock">Unlock</string>
    <string name="account_info_title">Account Info</string>
    <string name="account_info_summary">Tap to see your account information</string>
    <string name="account_info">Account Information</string>
    <string name="copy">Copy</string>
    <string name="copy_clipboard">Copied to clipboard</string>
    <string name="premium_already_unlock">Premium is already purchased</string>
    <string name="mail_it">Mail It</string>
    <string name="general">General</string>
    <string name="storage">Storage</string>
    <string name="look_feel"><![CDATA[Look & Feel]]></string>
    <string name="account">Account</string>
    <string name="developer_untouched">Developer (untouched)</string>
    <string name="about">About</string>
    <string name="premium">Premium</string>
    <string name="gpay_payment_url">https://github.com/KaustubhPatange/Moviesy/wiki/GPay-Payment-Flow</string>
    <string name="payment_help_url">https://github.com/KaustubhPatange/Moviesy/wiki/FAQs</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="no_download_found">No Download Found</string>
    <string name="no_download_text">Download some movies to watch them even from here.</string>
    <string name="details">Details</string>
    <string name="update_title">Update Available</string>
    <string name="update_message">An update is available to download</string>
    <string name="update_text">Do you want to install this update?</string>
    <string name="doze_title">Battery Optimization</string>
    <string name="doze_text">You need to disable battery optimization in order to prevent unexpected app shutdowns from background which interrupts services that causes malfunctioning of the app.</string>
    <string name="scanning">Scanning…</string>
    <string name="scan_complete">downloads found</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="recommend">Recommended</string>
    <string name="suggested">Suggested</string>
    <string name="empty_query">Query cannot be empty</string>
    <string name="adaptive_search">Adaptive Search</string>
    <string name="adaptive_search_text">Automatically match the best suitable search text based on your query. Often times we type something invalid, this option will fix those typos automatically and improve search results.\n\nCan be tweak from settings.</string>
    <string name="close">Close</string>
    <string name="results_for">Showing results for</string>
    <string name="remove_history">Remove from search history?</string>
    <string name="remove">REMOVE</string>
    <string name="next">Next</string>
    <string name="agree">Agree</string>
    <string name="back">Back</string>
    <string name="disclaimer_text"><b>Disclaimer</b>,\n\n\nApp let\'s you download &#38; stream HD movies from YTS website on the go (illegally).\n\nIt is basically an API + web-scrapping interface built on top of the website.\n\nIf this is something you don\'t want, you must stop using it.\n\nThis is indeed a hobby project!</string>
    <string name="disclaimer_text2"><b>Also</b>,\n\n\nSome carriers like Airtel (India) does not allow to access any contents from the YTS website which will make the app unable to use.\n\nIt is recommended to use WiFi over mobile data for accessing movies &amp; to solve this issue.\n\nIf it\'s still failing to work, then the last option is to use VPN!</string>
    <string name="unlock_premium">Unlock premium</string>
    <string name="unlock_premium_text">Unlock complete features of the app by paying one-time payment for a reasonable price.</string>
    <string name="no_action">No supported action found</string>
    <string name="torrent_connect_attempt">Attempting to connect torrent, this might take a while</string>
    <string name="torrent_connect_success">Successfully connected, waiting for it to be ready</string>
    <string name="backup_restore">Backups</string>
    <string name="drive_upload_text">Kindly wait for your content to be uploaded.</string>
    <string name="drive_upload_title">Uploading</string>
    <string name="caf_quality">Quality</string>
    <string name="_720p">720p</string>
    <string name="_1080p">1080p</string>
    <string name="_4k">4K</string>
    <string name="_3d">3D</string>
    <string name="paypal_layout_title">Looks like we were not able to find a purchase associated with this account.</string>
    <string name="paypal_layout_text">But if you\'ve paid using PayPal you can follow right through by entering the transaction Id below.</string>
    <string name="paypal_layout_hint">PayPal Transaction Id, eg: 1234567890ABCDEFG</string>
    <string name="proceed">Proceed</string>
</resources>