<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:background="?attr/colorForeground"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="?colorTextLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/caf_quality"
        android:textSize="18sp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/qualityChipGroup"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:singleSelection="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/_720p"/>
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/_1080p"/>
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/_4k"/>
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/_3d"/>
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_marginTop="10dp"
        android:textColor="?colorTextLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sort_by"
        android:textSize="18sp" />

    <!--year, rating, peers, seeds, download_count, like_count, date_added-->

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/sortChipGroup"
        app:selectionRequired="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:singleSelection="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/date"/>
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/download"/>
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/popular"/>
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/rating"/>
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/seeders"/>
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/year"/>
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_marginTop="10dp"
        android:textColor="?colorTextLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/order_by"
        android:textSize="18sp" />
    <com.google.android.material.chip.ChipGroup
        app:selectionRequired="true"
        android:id="@+id/OrderChipGroup"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:singleSelection="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/asc"/>
        <com.google.android.material.chip.Chip
            style="@style/customChipStyle"
            android:text="@string/desc"/>
    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <include
            layout="@layout/custom_alert_buttons"/>
    </LinearLayout>
</LinearLayout>