<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Author">
        <Preference
            app:key="author_owner_pref"
            app:summary="@string/author_owner"
            app:title="Owner" />
        <Preference
            app:key="author_email_pref"
            app:summary="@string/feedback_summary"
            app:title="@string/feedback_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="App">
        <Preference
            app:key="app_package_pref"
            app:title="Package" />
        <Preference
            app:key="app_version_pref"
            app:title="Version" />
        <Preference
            app:key="app_report_pref"
            app:summary="@string/report_issue_summary"
            app:title="@string/report_issue_title" />
    </PreferenceCategory>

</PreferenceScreen>