<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:text="@string/results_for"
        android:id="@+id/tv_results_for"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:fontFamily="@font/google_sans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/adaptive_tip"
        app:cardCornerRadius="5dp"
        android:layout_margin="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:padding="10dp"
                android:textSize="17sp"
                android:text="@string/adaptive_search"
                android:textColor="?colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="13sp"
                android:text="@string/adaptive_search_text"
                android:fontFamily="@font/google_sans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_close"
                android:layout_gravity="end"
                android:layout_margin="3dp"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>