<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tipDialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous_title"
            android:textColor="?attr/colorTextLight"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tipDialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/previous_text"
            android:textColor="?attr/colorTextLight"
            android:textSize="15sp" />

        <Button
            android:id="@+id/tipDialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:minHeight="0dp"
            android:text="@string/delete"
            android:textAllCaps="false" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>