<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="?colorAccent"
            android:textSize="17sp"
            tools:text="@string/adaptive_search" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="13sp"
            tools:text="@string/adaptive_search_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="3dp"
            android:text="@string/close"
            android:textAllCaps="false" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>